--- a/src/main/resources/com/me/jsp/bundle/file_es_SV.properties
+++ b/src/main/resources/com/me/jsp/bundle/file_es_SV.properties
@@ -1,7 +1,14 @@
 
 label.name=Nombre equipo
+label.name2=Descripcion
+label.name3=Foto
+label.name4=Nombre Jugador
+label.name5=Actulizar
+label.name6=Eliminar
+label.name7=Consultar
 abel.require_field=Campo requerido
 label.english=Ingl\u00e9s
 label.spanish=Espa\u00f1ol
 label.select_language=Seleccionar idioma
 label.currency=Moneda
+label.require_field=Campo Requerido
