--- a/src/main/resources/com/me/jsp/bundle/file_en_US.properties
+++ b/src/main/resources/com/me/jsp/bundle/file_en_US.properties
@@ -3,6 +3,12 @@
 # and open the template in the editor.
 
 label.name=Team Name
+label.name2=Description
+label.name3=Photo
+label.name4= Player's Name
+label.name5=Update
+label.name6=Delete
+label.name7=Consult
 label.require_field=Require field
 label.english=English
 label.spanish=Spanish
