Al 100% Los idiomas

--- a/src/main/resources/com/me/jsp/bundle/file_en_US.properties
+++ b/src/main/resources/com/me/jsp/bundle/file_en_US.properties
@@ -5,10 +5,14 @@
 label.name=Team Name
 label.name2=Description
 label.name3=Photo
-label.name4= Player's Name
-label.name5=Update
-label.name6=Delete
-label.name7=Consult
+label.name4= Player Name
+label.name5=Weight of player
+label.name6=Player Age
+label.name7=Player Height
+label.name8=Select Team
+label.name9=Registered  Players
+label.name10=Team
+label.name11=Registered Teams
 label.require_field=Require field
 label.english=English
 label.spanish=Spanish
