--- a/src/main/resources/com/me/jsp/bundle/file_es_SV.properties
+++ b/src/main/resources/com/me/jsp/bundle/file_es_SV.properties
@@ -3,9 +3,13 @@ label.name=Nombre equipo
 label.name2=Descripcion
 label.name3=Foto
 label.name4=Nombre Jugador
-label.name5=Actulizar
-label.name6=Eliminar
-label.name7=Consultar
+label.name5=Peso Jugador
+label.name6=Edad jugador
+label.name7=Altura Jugador
+label.name8=Seleccione un equipo
+label.name9=Jugadores Registrados
+label.name10=Equipo
+label.name11=Equipos Registrados
 abel.require_field=Campo requerido
 label.english=Ingl\u00e9s
 label.spanish=Espa\u00f1ol
