Al 100% Los idiomas en las 2 paginas

--- a/src/main/resources/com/me/jsp/bundle/file_en_US.properties
+++ b/src/main/resources/com/me/jsp/bundle/file_en_US.properties
@@ -13,6 +13,7 @@ label.name8=Select Team
 label.name9=Registered  Players
 label.name10=Team
 label.name11=Registered Teams
+label.name12=Players
 label.require_field=Require field
 label.english=English
 label.spanish=Spanish
