--- a/src/main/resources/com/me/jsp/bundle/file_es_SV.properties
+++ b/src/main/resources/com/me/jsp/bundle/file_es_SV.properties
@@ -10,6 +10,7 @@ label.name8=Seleccione un equipo
 label.name9=Jugadores Registrados
 label.name10=Equipo
 label.name11=Equipos Registrados
+label.name12=Jugadores
 abel.require_field=Campo requerido
 label.english=Ingl\u00e9s
 label.spanish=Espa\u00f1ol
